--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>سوق الأميال السعودي - الأسئلة الشائعة</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,6 +14,11 @@
             <div class="logo">
                 <img src="saudi1.png" alt="شعار سوق الأميال السعودي">
             </div>
+            <button class="mobile-menu-toggle" aria-label="القائمة">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
             <nav>
                 <ul>
                     <li><a href="index.html#home">الرئيسية</a></li>
@@ -40,6 +45,8 @@
             </nav>
         </div>
     </header>
+
+    <div class="menu-overlay"></div>
 
     <section class="faq-hero">
         <div class="container">
