--- a/faq.html
+++ b/faq.html
@@ -133,5 +133,29 @@
     </footer>
 
     <script src="script.js"></script>
+    
+    <!-- Share Navigation -->
+    <div class="share-navigation">
+        <div class="share-toggle">
+            <i class="fas fa-share-alt"></i>
+        </div>
+        <div class="share-menu">
+            <a href="#" class="share-btn facebook" data-platform="facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="share-btn twitter" data-platform="twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="share-btn whatsapp" data-platform="whatsapp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="#" class="share-btn telegram" data-platform="telegram">
+                <i class="fab fa-telegram-plane"></i>
+            </a>
+            <a href="#" class="share-btn copy" data-platform="copy">
+                <i class="fas fa-link"></i>
+            </a>
+        </div>
+    </div>
 </body>
 </html> 
