--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,33 @@
             </a>
         </div>
     </div>
+
+    <!-- Live Chat Widget -->
+    <div class="chat-widget">
+        <div class="chat-toggle">
+            <i class="fas fa-comments"></i>
+        </div>
+        <div class="chat-container">
+            <div class="chat-header">
+                <h3>المحادثة المباشرة</h3>
+                <span class="chat-close">&times;</span>
+            </div>
+            <div class="chat-messages">
+                <div class="message system">
+                    <p>مرحباً بك في سوق الأميال السعودي! كيف يمكننا مساعدتك اليوم؟</p>
+                    <span class="time">الآن</span>
+                    <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-chat-btn">
+                        <i class="fab fa-whatsapp"></i> التواصل المباشر عبر واتساب
+                    </a>
+                </div>
+            </div>
+            <div class="chat-input">
+                <input type="text" placeholder="اكتب رسالتك هنا..." id="chat-message-input">
+                <button id="chat-send-btn">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html> 
