--- a/refund.html
+++ b/refund.html
@@ -115,5 +115,57 @@
     </footer>
 
     <script src="script.js"></script>
+    
+    <!-- Share Navigation -->
+    <div class="share-navigation">
+        <div class="share-toggle">
+            <i class="fas fa-share-alt"></i>
+        </div>
+        <div class="share-menu">
+            <a href="#" class="share-btn facebook" data-platform="facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="share-btn twitter" data-platform="twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="share-btn whatsapp" data-platform="whatsapp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="#" class="share-btn telegram" data-platform="telegram">
+                <i class="fab fa-telegram-plane"></i>
+            </a>
+            <a href="#" class="share-btn copy" data-platform="copy">
+                <i class="fas fa-link"></i>
+            </a>
+        </div>
+    </div>
+    
+    <!-- Live Chat Widget -->
+    <div class="chat-widget">
+        <div class="chat-toggle">
+            <i class="fas fa-comments"></i>
+        </div>
+        <div class="chat-container">
+            <div class="chat-header">
+                <h3>المحادثة المباشرة</h3>
+                <span class="chat-close">&times;</span>
+            </div>
+            <div class="chat-messages">
+                <div class="message system">
+                    <p>مرحباً بك في سوق الأميال السعودي! كيف يمكننا مساعدتك اليوم؟</p>
+                    <span class="time">الآن</span>
+                    <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-chat-btn">
+                        <i class="fab fa-whatsapp"></i> التواصل المباشر عبر واتساب
+                    </a>
+                </div>
+            </div>
+            <div class="chat-input">
+                <input type="text" placeholder="اكتب رسالتك هنا..." id="chat-message-input">
+                <button id="chat-send-btn">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html> 
