--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
+                <a href="index.html">
                 <svg width="150" height="50" viewBox="0 0 150 50" xmlns="http://www.w3.org/2000/svg" class="airline-logo">
                     <defs>
                         <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -28,6 +29,7 @@
                     <path d="M95,25 L125,25 L125,30 L95,30 Z" fill="#0d47a1" />
                     <path d="M95,35 L115,35 L115,40 L95,40 Z" fill="#0d47a1" />
                 </svg>
+                </a>
             </div>
             <button class="mobile-menu-toggle" aria-label="القائمة">
                 <span class="bar"></span>
@@ -192,17 +194,15 @@
                 <button class="reset-search-btn" data-translate="faq.resetSearch">عرض جميع الأسئلة</button>
             </div>
 
-            <div class="faq-contact">
-                <h3 data-translate="faq.noAnswer">لم تجد إجابة لسؤالك؟</h3>
-                <p data-translate="faq.contactPrompt">يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
+            <div class="terms-contact">
+                <h3 data-translate="faq.contact.title">هل لديك استفسارات؟</h3>
+                <p data-translate="faq.contact.text">يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
                 <div class="faq-buttons">
                     <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i>
-                        <span data-translate="faq.whatsappBtn">تواصل عبر واتساب</span>
+                        <i class="fab fa-whatsapp"></i> <span data-translate="chat.whatsappBtn">تواصل عبر واتساب</span>
                     </a>
                     <a href="index.html#contact" class="contact-btn">
-                        <i class="fas fa-envelope"></i>
-                        <span data-translate="faq.contactForm">نموذج الاتصال</span>
+                        <i class="fas fa-envelope"></i> <span data-translate="contact.title">نموذج الاتصال</span>
                     </a>
                 </div>
             </div>
