--- a/refund.html
+++ b/refund.html
@@ -12,6 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
+                <a href="index.html">
                 <svg width="150" height="50" viewBox="0 0 150 50" xmlns="http://www.w3.org/2000/svg" class="airline-logo">
                     <defs>
                         <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -28,6 +29,7 @@
                     <path d="M95,25 L125,25 L125,30 L95,30 Z" fill="#0d47a1" />
                     <path d="M95,35 L115,35 L115,40 L95,40 Z" fill="#0d47a1" />
                 </svg>
+                </a>
             </div>
             <button class="mobile-menu-toggle" aria-label="القائمة">
                 <span class="bar"></span>
