--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
 
     <div class="menu-overlay"></div>
 
-    <section class="faq-hero">
+    <section class="terms-hero">
         <div class="container">
             <h1 data-translate="faq.title">الأسئلة الشائعة</h1>
             <p data-translate="faq.subtitle">إجابات على الأسئلة الأكثر شيوعاً حول أميال الخطوط السعودية</p>
