--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
 
     <div class="menu-overlay"></div>
 
-    <section class="terms-hero">
+    <section class="faq-hero">
         <div class="container">
             <h1 data-translate="faq.title">الأسئلة الشائعة</h1>
             <p data-translate="faq.subtitle">إجابات على الأسئلة الأكثر شيوعاً حول أميال الخطوط السعودية</p>
@@ -194,15 +194,17 @@
                 <button class="reset-search-btn" data-translate="faq.resetSearch">عرض جميع الأسئلة</button>
             </div>
 
-            <div class="terms-contact">
-                <h3 data-translate="faq.contact.title">هل لديك استفسارات؟</h3>
-                <p data-translate="faq.contact.text">يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
+            <div class="faq-contact">
+                <h3 data-translate="faq.noAnswer">لم تجد إجابة لسؤالك؟</h3>
+                <p data-translate="faq.contactPrompt">يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
                 <div class="faq-buttons">
                     <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i> <span data-translate="chat.whatsappBtn">تواصل عبر واتساب</span>
+                        <i class="fab fa-whatsapp"></i>
+                        <span data-translate="faq.whatsappBtn">تواصل عبر واتساب</span>
                     </a>
                     <a href="index.html#contact" class="contact-btn">
-                        <i class="fas fa-envelope"></i> <span data-translate="contact.title">نموذج الاتصال</span>
+                        <i class="fas fa-envelope"></i>
+                        <span data-translate="faq.contactForm">نموذج الاتصال</span>
                     </a>
                 </div>
             </div>
