--- a/index.html
+++ b/index.html
@@ -80,6 +80,71 @@
                     </div>
                 </div>
             </div>
+            <div class="slide">
+                <img src="plane2.jpg" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn" data-translate="hero.exploreMiles">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span data-translate="hero.contactUs">تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="plane3.jpg" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn" data-translate="hero.exploreMiles">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span data-translate="hero.contactUs">تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="plane4.jpg" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn" data-translate="hero.exploreMiles">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span data-translate="hero.contactUs">تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="plane5.jpg" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn" data-translate="hero.exploreMiles">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span data-translate="hero.contactUs">تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="plane6.jpg" alt="طائرة الخطوط السعودية">
+                <div class="slide-content">
+                    <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
+                    <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
+                    <div class="hero-buttons">
+                        <a href="#miles" class="cta-btn" data-translate="hero.exploreMiles">استكشف الأميال</a>
+                        <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
+                            <i class="fab fa-whatsapp"></i> <span data-translate="hero.contactUs">تواصل معنا</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
