--- a/faq.html
+++ b/faq.html
@@ -271,5 +271,6 @@
 
     <script src="translations.js"></script>
     <script src="script.js"></script>
+    <script src="payment-popup.js"></script>
 </body>
 </html> 
