--- a/index.html
+++ b/index.html
@@ -391,5 +391,6 @@
 
     <script src="translations.js"></script>
     <script src="script.js"></script>
+    <script src="payment-popup.js"></script>
 </body>
 </html> 
