--- a/terms.html
+++ b/terms.html
@@ -303,5 +303,6 @@
 
     <script src="translations.js"></script>
     <script src="script.js"></script>
+    <script src="payment-popup.js"></script>
 </body>
 </html> 
