--- a/refund.html
+++ b/refund.html
@@ -241,5 +241,6 @@
 
     <script src="translations.js"></script>
     <script src="script.js"></script>
+    <script src="payment-popup.js"></script>
 </body>
 </html> 
