--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="hero" id="home">
         <div class="slider">
             <div class="slide active">
-                <img src="plane1.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane1.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="plane2.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane2.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="plane3.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane3.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="plane4.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane4.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="plane5.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane5.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="slide">
-                <img src="plane6.jpg" alt="طائرة الخطوط السعودية">
+                <img src="images/slider/plane6.jpg" alt="طائرة الخطوط السعودية">
                 <div class="slide-content">
                     <h1 data-translate="hero.title">استكشف العالم مع سوق الأميال السعودي</h1>
                     <p data-translate="hero.subtitle">اشترِ الأميال لمغامرتك القادمة</p>
