--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'ar',
+                includedLanguages: 'en,ar,de,fr',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                multilanguagePage: true,
+                gaTrack: true,
+                autoDisplay: false,
+                useCustomTranslateLanguageNames: false
+            }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <body>
     <header>
@@ -58,6 +72,7 @@
                             <span data-translate="nav.darkMode">الوضع الداكن</span>
                         </button>
                     </li>
+                    <li><div id="google_translate_element"></div></li>
                 </ul>
             </nav>
         </div>
@@ -301,7 +316,6 @@
         </div>
     </div>
 
-    <script src="translations.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
