--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
                 includedLanguages: 'en,ar,de,fr',
                 layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
                 multilanguagePage: true,
-                gaTrack: true,
-                autoDisplay: false,
-                useCustomTranslateLanguageNames: false
+                gaTrack: true
             }, 'google_translate_element');
         }
     </script>
